Add menu and menu items
- Added #menu div
- Added #menu-items div
- Added 4 a elements inside menu-items div

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
  <title>website menu</title>
 </head>
 <body>
- 
+<div id="menu">
+ <div id="menu-items">
+  <a href="#" class="menu-item">home</a>
+  <a href="#" class="menu-item">shop</a>
+  <a href="#" class="menu-item">about</a>
+  <a href="#" class="menu-item">contact</a>
+ </div>
+</div>
 </body>
 </html>
