--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <a href="#" class="menu-item">about</a>
   <a href="#" class="menu-item">contact</a>
  </div>
+ 
+ <!-- temp -->
+ <div id="menu-background-image"></div>
 </div>
 </body>
 </html>
