Add link to script src

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
  <!-- stylesheet -->
  <link rel="stylesheet" href="./style.css">
  
+ <!-- JS -->
+ <script defer src="./script.js"></script>
+ 
  <title>website menu</title>
 </head>
 <body>
@@ -23,7 +26,7 @@
   <a href="#" class="menu-item">about</a>
   <a href="#" class="menu-item">contact</a>
  </div>
- 
+
  <!-- temp -->
  <div id="menu-background-image"></div>
 </div>
